@@ -12,6 +12,7 @@
     using AjClipper.Compiler;
 
     using Microsoft.VisualStudio.TestTools.UnitTesting;
+    using AjClipper.Language;
 
     [TestClass]
     public class ExamplesTests
@@ -42,17 +43,20 @@
             Assert.AreEqual("positive", environment.GetValue("bar"));
         }
 
-        //[TestMethod]
-        //[DeploymentItem("Examples\\SimpleProcedure.prg")]
-        //public void ShouldParseAndEvaluateSimpleProcedure()
-        //{
-        //    Parser parser = new Parser(File.OpenText("SimpleProcedure.prg"));
-        //    ICommand command = parser.ParseCommandList();
-        //    ValueEnvironment environment = new ValueEnvironment();
+        [TestMethod]
+        [DeploymentItem("Examples\\SimpleProcedure.prg")]
+        public void ShouldParseAndEvaluateSimpleProcedure()
+        {
+            Parser parser = new Parser(File.OpenText("SimpleProcedure.prg"));
+            ICommand command = parser.ParseCommandList();
+            ValueEnvironment environment = new ValueEnvironment(ValueEnvironmentType.Public);
 
-        //    command.Execute(null, environment);
+            command.Execute(null, environment);
 
-        //    Assert.AreEqual("foo", environment.GetValue("bar"));
-        //}
+            object result = environment.GetValue("setbar");
+
+            Assert.IsNotNull(result);
+            Assert.IsInstanceOfType(result, typeof(Procedure));
+        }
     }
 }
