@@ -1,11 +1,12 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using AjClipper.Commands;
-
-namespace AjClipper.Language
+﻿namespace AjClipper.Language
 {
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    using AjClipper.Commands;
+
     public class Procedure
     {
         private string name;
